tests/ui/impl-trait/in-trait/rpitit-duplicate-associated-fn.rs
// issue#140796

trait Bar {
    fn method() -> impl Sized;
    fn method() -> impl Sized;
    //~^ ERROR: the name `method` is defined multiple times
}

fn main() {}
